# pipes-extra

./: .travis.yml  Control-Pipe-Binary.html  Control-Pipe-Combinators.html  Control-Pipe-Conduit.html  Control-Pipe-Guarded.html  Control-Pipe-Network.html  Control-Pipe-Zlib.html  README.md  bench.hs  doc-index.html  index-frames.html  index.html  mini_Control-Pipe-Binary.html  mini_Control-Pipe-Combinators.html  mini_Control-Pipe-Conduit.html  mini_Control-Pipe-Guarded.html  mini_Control-Pipe-Network.html  mini_Control-Pipe-Zlib.html  pipes-extra.cabal  pipes-extra.haddock
Benchmarks/: .gitignore  general.hs  simple.hs  zlib.hs  zlib.html
Control/Pipe/: Binary.hs  Chunked.hs  Combinators.hs  Conduit.hs  Coroutine.hs  Guarded.hs  Network.hs  Tee.hs  Text.hs  Zip.hs  Zlib.hs
Data/Generator/: Length.hs
Data/Monoid/: MonoidEq.hs  MonoidSplit.hs
Examples/: compress.hs  decompress.hs  telnet.hs
Examples/Telnet/: Main.hs
Examples/finalizers/: complex.hs  conf  out.txt  simple.hs
Tests/: guarded.hs  tests.hs
bench/: .gitignore  general.hs  simple.hs  zlib.hs
examples/: compress.hs  decompress.hs  telnet.hs
examples/finalizers/: complex.hs  simple.hs
misc/: LICENSE
misc/Benchmarks/: general.hs  zlib.hs
misc/Control/Pipe/: Conduit.hs
misc/Examples/: decompress.hs
pipes-conduit/: pipes-conduit.cabal
pipes-conduit/Control/Pipe/: Conduit.hs
pipes-extra/: CHANGELOG  pipes-extra.cabal
pipes-extra/Control/Pipe/: Binary.hs  ChunkPipe.hs  Combinators.hs  Conduit.hs  Coroutine.hs  PutbackPipe.hs  Tee.hs  Zip.hs
pipes-extra/Tests/: tests.hs
pipes-zlib/: pipes-zlib.cabal  simple.html
pipes-zlib/Control/Pipe/: Zlib.hs
tests/: Tests.hs
